# llm-foundation-blu1606

./: README.md  exercises.md  pyproject.toml  student_info.md
plans/: 20260528-1653-llm-foundation-plan.md
solution/: solution.py
starter-code/: template.py
